Bump to 2.8.0; respect cgroup memory limits